--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<!-- <link rel="icon" href="./favicon.png" /> -->
+		<!-- <link rel="icon" href="/word-game/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./global.css" />
+		<link rel="stylesheet" href="/word-game/global.css" />
 		<meta http-equiv="content-security-policy" content=""><title>Word Game</title>
-	<link rel="modulepreload" href="/_app/start-9490a0d0.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-2bdf7795.js">
-	<link rel="modulepreload" href="/_app/chunks/preload-helper-e4860ae8.js">
-	<link rel="modulepreload" href="/_app/layout.svelte-fcb184e0.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-4184ed30.js">
+	<link rel="modulepreload" href="/word-game/_app/start-706797ed.js">
+	<link rel="modulepreload" href="/word-game/_app/chunks/vendor-2bdf7795.js">
+	<link rel="modulepreload" href="/word-game/_app/chunks/preload-helper-776d3f39.js">
+	<link rel="modulepreload" href="/word-game/_app/layout.svelte-fcb184e0.js">
+	<link rel="modulepreload" href="/word-game/_app/pages/index.svelte-3d573d42.js">
 	</head>
 	<body>
 		<div>
@@ -21,10 +21,10 @@
 
 
 		<script type="module" data-hydrate="2eq20f">
-		import { start } from "/_app/start-9490a0d0.js";
+		import { start } from "/word-game/_app/start-706797ed.js";
 		start({
 			target: document.querySelector('[data-hydrate="2eq20f"]').parentNode,
-			paths: {"base":"","assets":""},
+			paths: {"base":"/word-game","assets":"/word-game"},
 			session: {},
 			route: true,
 			spa: false,
@@ -33,8 +33,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/layout.svelte-fcb184e0.js"),
-						import("/_app/pages/index.svelte-4184ed30.js")
+					import("/word-game/_app/layout.svelte-fcb184e0.js"),
+						import("/word-game/_app/pages/index.svelte-3d573d42.js")
 				],
 				params: {},
 				routeId: ""
